--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/harumburum/clippy",
   "dependencies": {
     "express": "~4.4.1",
-    "jade": "~1.3.1"
+    "jade": "~1.3.1",
+    "stylus": "~0.46.3",
+    "body-parser": "~1.3.0",
+    "morgan": "~1.1.1",
+    "mongoose": "~3.8.12"
   }
 }
