--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "stylus": "~0.46.3",
     "body-parser": "~1.3.0",
     "morgan": "~1.1.1",
-    "mongoose": "~3.8.12"
+    "mongoose": "~3.8.12",
+    "imagemagick": "~0.1.3"
   }
 }
