--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "imagemagick": "~0.1.3",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
-    "express-session": "~1.7.6"
+    "express-session": "~1.7.6",
+    "cookie-parser": "~1.3.2"
   }
 }
